fix overflow 2.0

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -29,7 +29,7 @@ body {
     font-size: 1.125rem;
     height: 100vh;
     width: 100vw;
-    overflow-x: hidden;
+    overflow: hidden;
 
 }
 
@@ -150,12 +150,6 @@ nav ul .red-button li:hover {
 
 .topMenu img {
     width: 160px;
-}
-
-#close{
-    position: relative;
-    left: 15%;
-    
 }
 
 .hamburguerMenu ul {
